--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
                             </a>
                             <a href="#work" class="btn btn-grey btn-md">Hobbies & Interests
                             </a>
-                            
+
 
                         </div>
                         <!--Grid column-->
@@ -280,7 +280,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">PHP</h6>
-                                    <p class="grey-text">Symfony framework.
+                                    <p class="grey-text">Symfony framework
                                     </p>
                                     <div style="height:15px"></div>
                                 </div>
@@ -294,7 +294,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">Java</h6>
-                                    <p class="grey-text">Basic & Intermediate syntax. Swing applications.
+                                    <p class="grey-text">Basic & Intermediate syntax. Swing applications
                                     </p>
                                     <div style="height:15px"></div>
                                 </div>
@@ -308,7 +308,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">Javascript</h6>
-                                    <p class="grey-text">Pure Javascript. NPM. Node.js. React.js.</p>
+                                    <p class="grey-text">Pure Javascript. NPM. Node.js. React.js</p>
                                     <div style="height:15px"></div>
                                 </div>
                             </div>
@@ -321,7 +321,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">Octave/Mathlab</h6>
-                                    <p class="grey-text">Basic signal pacakages.</p>
+                                    <p class="grey-text">Basic signal packages</p>
                                     <div style="height:15px"></div>
                                 </div>
                             </div>
@@ -333,7 +333,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">Python</h6>
-                                    <p class="grey-text">Basic & Intermediate syntax.</p>
+                                    <p class="grey-text">Basic & Intermediate syntax</p>
                                     <div style="height:15px"></div>
                                 </div>
                             </div>
@@ -352,7 +352,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">HTML5</h6>
-                                    <p class="grey-text">HTML properties and elements.</p>
+                                    <p class="grey-text">HTML properties and elements</p>
                                     <div style="height:15px"></div>
                                 </div>
                             </div>
@@ -363,7 +363,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">CSS3</h6>
-                                    <p class="grey-text">CSS style properties. CSS animations.</p>
+                                    <p class="grey-text">CSS style properties. CSS animations</p>
                                     <div style="height:15px"></div>
                                 </div>
                             </div>
@@ -374,7 +374,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">Bootstrap</h6>
-                                    <p class="grey-text">Boostrap components and templates.</p>
+                                    <p class="grey-text">Boostrap components and templates</p>
                                     <div style="height:15px"></div>
                                 </div>
                             </div>
@@ -385,7 +385,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">React</h6>
-                                    <p class="grey-text">Framework.</p>
+                                    <p class="grey-text">Framework</p>
                                     <div style="height:15px"></div>
                                 </div>
                             </div>
@@ -401,7 +401,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">Git/Github</h6>
-                                    <p class="grey-text">Have own and third-people repositories I've comitted to.
+                                    <p class="grey-text">Have own and third-people repositories I've comitted to
                                     </p>
                                     <div style="height:15px"></div>
                                 </div>
@@ -414,7 +414,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">MySQL</h6>
-                                    <p class="grey-text">Databases structure design. All types of querys.
+                                    <p class="grey-text">Databases structure design. All types of querys
                                     </p>
                                     <div style="height:15px"></div>
                                 </div>
@@ -427,7 +427,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">Docker</h6>
-                                    <p class="grey-text">Handling of Docker containers and commands.
+                                    <p class="grey-text">Handling of Docker containers and commands
                                     </p>
                                     <div style="height:15px"></div>
                                 </div>
@@ -440,7 +440,7 @@
                                 </div>
                                 <div class="col-10">
                                     <h6 class="feature-title">Websockets</h6>
-                                    <p class="grey-text">Server and Client handling.
+                                    <p class="grey-text">Server and Client handling
                                     </p>
                                     <div style="height:15px"></div>
                                 </div>
@@ -467,7 +467,7 @@
                 <!--Section: More-->
                 <section>
 
-                    <h2 class="my-5 h3 text-center">...and even more</h2>
+                    <h2 class="my-5 h3 text-center">Hobbies & Interests</h2>
 
                     <!--First row-->
                     <div class="row features-small mt-5 wow fadeIn">
@@ -480,8 +480,8 @@
                                     <i class="fa fa-firefox fa-2x mb-1 indigo-text" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-10 mb-2 pl-3">
-                                    <h5 class="feature-title font-bold mb-1">Cross-browser compatibility</h5>
-                                    <p class="grey-text mt-2">Chrome, Firefox, IE, Safari, Opera, Microsoft Edge - MDB loves all browsers; all browsers love MDB.
+                                    <h5 class="feature-title font-bold mb-1">React</h5>
+                                    <p class="grey-text mt-2">Learning more about React framework
                                     </p>
                                 </div>
                             </div>
@@ -494,11 +494,11 @@
                             <!--Grid row-->
                             <div class="row">
                                 <div class="col-2">
-                                    <i class="fa fa-level-up fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                                    <i class="fa fa-android fa-2x mb-1 indigo-text" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-10 mb-2">
-                                    <h5 class="feature-title font-bold mb-1">Frequent updates</h5>
-                                    <p class="grey-text mt-2">MDB becomes better every month. We love the project and enhance as much as possible.
+                                    <h5 class="feature-title font-bold mb-1">Android</h5>
+                                    <p class="grey-text mt-2">Willing to create Android apps in the future
                                     </p>
                                 </div>
                             </div>
@@ -511,12 +511,11 @@
                             <!--Grid row-->
                             <div class="row">
                                 <div class="col-2">
-                                    <i class="fa fa-comments-o fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                                    <i class="fa fa-coffee fa-2x mb-1 indigo-text" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-10 mb-2">
-                                    <h5 class="feature-title font-bold mb-1">Active community</h5>
-                                    <p class="grey-text mt-2">Our society grows day by day. Visit our forum and check how it is to be a part of our family.
-                                    </p>
+                                    <h5 class="feature-title font-bold mb-1">JavaFX/Java Web</h5>
+                                    <p class="grey-text mt-2">Java modules I'm willing to learn
                                 </div>
                             </div>
                             <!--/Grid row-->
@@ -528,12 +527,11 @@
                             <!--Grid row-->
                             <div class="row">
                                 <div class="col-2">
-                                    <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                                    <i class="fa fa-database fa-2x mb-1 indigo-text" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-10 mb-2">
-                                    <h5 class="feature-title font-bold mb-1">jQuery 3.x</h5>
-                                    <p class="grey-text mt-2">MDB is integrated with newest jQuery. Therefore you can use all the latest features which come along with
-                                        it.
+                                    <h5 class="feature-title font-bold mb-1">PostgreSQL</h5>
+                                    <p class="grey-text mt-2">Database management system which is lately in demmand
                                     </p>
                                 </div>
                             </div>
@@ -552,12 +550,12 @@
                             <!--Grid row-->
                             <div class="row">
                                 <div class="col-2">
-                                    <i class="fa fa-cubes fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                                    <i class="fa fa-wrench fa-2x mb-1 indigo-text" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-10 mb-2">
-                                    <h5 class="feature-title font-bold mb-1">Modularity</h5>
-                                    <p class="grey-text mt-2">Material Design for Bootstrap comes with both, compiled, ready to use libraries including all features as
-                                        well as modules for CSS (SASS files) and JS.</p>
+                                    <h5 class="feature-title font-bold mb-1">Engineering</h5>
+                                    <p class="grey-text mt-2">Electric Circuits, Electronics, LTI systems,
+                                        Digital Logic, Physics, Math</p>
                                 </div>
                             </div>
                             <!--/Grid row-->
@@ -569,11 +567,12 @@
                             <!--Grid row-->
                             <div class="row">
                                 <div class="col-2">
-                                    <i class="fa fa-question fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                                    <i class="fa fa-soccer-ball-o fa-2x mb-1 indigo-text" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-10 mb-2">
-                                    <h5 class="feature-title font-bold mb-1">Technical support</h5>
-                                    <p class="grey-text mt-2">We care about reliability. If you have any questions - do not hesitate to contact us.
+                                    <h5 class="feature-title font-bold mb-1">Sports</h5>
+                                    <p class="grey-text mt-2">Have practiced tennis, table tennis, basketball and swimming.
+                                        Love soccer.
                                     </p>
                                 </div>
                             </div>
@@ -586,11 +585,12 @@
                             <!--Grid row-->
                             <div class="row">
                                 <div class="col-2">
-                                    <i class="fa fa-th fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                                    <i class="fa fa-gamepad fa-2x mb-1 indigo-text" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-10 mb-2">
-                                    <h5 class="feature-title font-bold mb-1">Flexbox</h5>
-                                    <p class="grey-text mt-2">MDB fully supports Flex Box. You can forget about alignment issues.</p>
+                                    <h5 class="feature-title font-bold mb-1">Videogames</h5>
+                                    <p class="grey-text mt-2">Fan of Pokemon videogames saga. General Nintendo lover.
+                                    FIFA, COD, DBZ games</p>
                                 </div>
                             </div>
                             <!--/Grid row-->
@@ -602,11 +602,13 @@
                             <!--Grid row-->
                             <div class="row">
                                 <div class="col-2">
-                                    <i class="fa fa-file-code-o fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                                    <i class="fa fa-book fa-2x mb-1 indigo-text" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-10 mb-2">
-                                    <h5 class="feature-title font-bold mb-1">SASS files</h5>
-                                    <p class="grey-text mt-2">Arranged and well documented .scss files can't wait until you compile them.</p>
+                                    <h5 class="feature-title font-bold mb-1">Books</h5>
+                                    <p class="grey-text mt-2">Fan of Edgar Allan Poe's books. 
+                                        Love detective fiction books. Follower of 'Los Cuatro Reinos', Venezuelan books saga.
+                                    </p>
                                 </div>
                             </div>
                             <!--/Grid row-->
